@@ -4,6 +4,7 @@ from .app import *
 from .win import *
 
 __all__ = [
+    '__version__',
     'Application',
     'Window',
 ]
