@@ -1,13 +1,13 @@
 import win32con
 import win32file
 from win32console import *
-import msvcrt
+#import msvcrt
 
 
 class Application:
-    def __init__(self):
-        #AllocConsole()
-        #self.stdout = GetStdHandle(STD_OUTPUT_HANDLE)
+    def __init__(self, shell):
+        self.shell = shell
+
         self.console = PyConsoleScreenBufferType(win32file.CreateFile(
             "CONIN$",
             win32con.GENERIC_READ | win32con.GENERIC_WRITE,
@@ -21,19 +21,52 @@ class Application:
         self.buffer = CreateConsoleScreenBuffer()
         self.buffer.SetConsoleActiveScreenBuffer()
 
-    def run(self):
         size, _ = self.buffer.GetConsoleCursorInfo()
         self.buffer.SetConsoleCursorInfo(size, False)
 
-    def done(self):
-        #FreeConsole()
+    def exit(self):
+        size, _ = self.buffer.GetConsoleCursorInfo()
+        self.buffer.SetConsoleCursorInfo(size, True)
+
         self.buffer.Close()
 
     def refresh(self):
         pass
 
-    def getch(self):
-        return ord(msvcrt.getch())
+    def inputs(self):
+        while self.shell.go:
+            #key = ord(msvcrt.getch())
+
+            #if key == 3: # ctrl-c
+            #    raise KeyboardInterrupt()
+
+            #self.shell.on_key(key)
+
+            for input in self.console.ReadConsoleInput(1):
+                if input.EventType == KEY_EVENT:
+                    if input.KeyDown:
+                        if input.Char == '\0':
+                            pass # FIXME - virtual key
+
+                        elif input.Char == '\x03': # ctrl-c
+                            raise KeyboardInterrupt()
+
+                        else:
+                            self.shell.on_key(ord(input.Char))
+
+                elif input.EventType == MOUSE_EVENT:
+                    flags = input.EventFlags # 1=push, 2=click, 4=scroll
+                    pos = input.MousePosition
+                    btn = input.ButtonState
+                    #self.shell.on_mouse(flags, btn, pos)
+                    self.shell.on_mouse(pos.X, pos.Y,
+                        True if btn & 1 == 1 else False,
+                        True if btn & 4 == 4 else False,
+                        True if btn & 2 == 2 else False,
+                        -1 if btn & 4287102976 == 4287102976 else \
+                        1 if btn & 7864320 == 7864320 else \
+                        0
+                    )
 
 
 class Window:
@@ -45,28 +78,21 @@ class Window:
         self.h = h
 
     def print(self, txt, end):
-        #self.app.buffer.WriteConsole(txt + '\n' if end else '')
-        self.app.buffer.WriteConsoleOutputCharacter(txt,
-            PyCOORDType(self.x + 1, self.y + 1))
+        self._write_(self.x + 1, self.y + 1, txt)
 
     def refresh(self):
-        self.app.buffer.WriteConsoleOutputCharacter('\u250c',
-            PyCOORDType(self.x, self.y))
-        self.app.buffer.WriteConsoleOutputCharacter('\u2500' * (self.w - 2),
-            PyCOORDType(self.x + 1, self.y))
-        self.app.buffer.WriteConsoleOutputCharacter('\u2510',
-            PyCOORDType(self.x + self.w - 1, self.y))
+        self._write_(self.x, self.y, '\u250c')
+        self._write_(self.x + 1, self.y, '\u2500' * (self.w - 2))
+        self._write_(self.x + self.w - 1, self.y, '\u2510')
 
         for y in range(self.y + 1, self.y + self.h):
-            self.app.buffer.WriteConsoleOutputCharacter('\u2502',
-                PyCOORDType(self.x, y))
-            self.app.buffer.WriteConsoleOutputCharacter('\u2502',
-                PyCOORDType(self.x + self.w - 1, y))
+            self._write_(self.x, y, '\u2502')
+            self._write_(self.x + self.w - 1, y, '\u2502')
 
-        self.app.buffer.WriteConsoleOutputCharacter('\u2514',
-            PyCOORDType(self.x, self.y + self.h - 1))
-        self.app.buffer.WriteConsoleOutputCharacter('\u2500' * (self.w - 2),
-            PyCOORDType(self.x + 1, self.y + self.h - 1))
-        self.app.buffer.WriteConsoleOutputCharacter('\u2518',
-            PyCOORDType(self.x + self.w - 1, self.y + self.h - 1))
+        self._write_(self.x, self.y + self.h - 1, '\u2514')
+        self._write_(self.x + 1, self.y + self.h - 1, '\u2500' * (self.w - 2))
+        self._write_(self.x + self.w - 1, self.y + self.h - 1, '\u2518')
+
+    def _write_(self, x, y, txt):
+        self.app.buffer.WriteConsoleOutputCharacter(txt, PyCOORDType(x, y))
 
